# NGSmodule

./: .env.example  .env.production  .gitignore  0-PrepareWorkDir.sh  1-preAlignmentQC.sh  2-Alignment.sh  3-postAlignmentQC.sh  Alignment.sh  BACKEND_API_IMPLEMENTATION_PLAN.md  BACKEND_API_TESTING_GUIDE.md  BACKEND_OPTIMIZATION_PLAN.md  BuildIndex.sh  CODE_REDUNDANCY_ANALYSIS.md  COMPREHENSIVE_DEVELOPMENT_PLAN.md  CheckENV.sh  CreateConfigFile.sh  CreateSampleInfoFile.sh  DEPLOYMENT_GUIDE.md  DifferentialExpression.R  DifferentialExpression.sh  E2E_TEST_GUIDE.md  EXECUTIVE_SUMMARY.md  FILE_INVENTORY.txt  FRONTEND_BACKEND_INTEGRATION_REPORT.md  FRONTEND_TEST_CHECKLIST.md  Function.sh  GlobalFunction.sh  LoadConfig.sh  MONITORING_LOGGING_GUIDE.md  NGSmodule  NGSpipe  PHASE1_COMPLETE.md  PHASE2_COMPLETION_REPORT.md  PHASE3_COMPLETION_REPORT.md  PHASE4_COMPLETION_REPORT.md  PHASE5_COMPLETION_REPORT.md  PHASE6_COMPLETION_REPORT.md  PHASE7_COMPLETION_REPORT.md  PHASE8_PROGRESS_REPORT.md  PHASE_10_COMPLETION_REPORT.md  (+67 more)
backend/: .env.example  .flake8  Dockerfile  RATE_LIMITING.md  README.md  alembic.ini  create_admin.py  init_db.py  init_pipeline_templates.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: add_admin_enhanced_tables.py  add_data_downloads_tables.py  add_notifications_and_stats.py  baseline_create_core_tables.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: admin.py  (+20 more)
backend/app/core/: config.py  database.py  datetime_utils.py  deps.py  observability.py  permissions.py  rate_limit.py  security.py  types.py
backend/app/models/: __init__.py  alert.py  audit_log.py  backup.py  data_download.py  file.py  notification.py  pipeline_template.py  project.py  result.py  sample.py  system_job.py  task.py  user.py  vendor_credential.py
backend/app/schemas/: __init__.py  admin.py  ai.py  analytics.py  common.py  data_download.py  file.py  notification.py  pipeline.py  project.py  result.py  sample.py  stats.py  task.py  user.py  vendor_credential.py
backend/scripts/: backup.sh  init.sql  restore.sh
backend/tests/: README.md  __init__.py  conftest.py  requirements-test.txt  test_data_downloads.py  test_exception_handlers.py  test_projects_api.py  test_users_api.py
(+465 files in other folders)
